--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "matplotlib>=3.10.7",
+    "nltk>=3.9.2",
+    "opencv-python>=4.12.0.88",
+    "pandas>=2.3.3",
+    "pymupdf>=1.26.5",
+    "pytesseract>=0.3.13",
+    "sastrawi>=1.0.1",
+    "scikit-learn>=1.7.2",
+]
